# ClickCycle

./: CMakeLists.txt  README.md  main.cpp
Source/: main.cpp
Source/RecordingFunction/: FileWriter.cpp  file_writer.cpp  file_writer.h  playback.cpp  recording.cpp
